--- a/config.json
+++ b/config.json
@@ -12,6 +12,18 @@
     [1702, 30, 131, 28]
   ],
 
+  "try_int": 3,
+
+  "path_to_hd": "",
+
+  "auto_open_hd": false,
+
+  "path_to_obs": "",
+
+  "auto_open_obs": false,
+
+  "skins_ad": [905, 655],
+
   "server_browser": [1145, 565],
 
   "server_search": [850, 645],
